# cc-proxy

./: .gitignore  2025-08-23-look-at-the-pipeline-service-code-review-it-from.txt  CLAUDE.md  README.md  ROADMAP.md  architecture.md  config.example.yaml  migration.md  plan.md  pyproject.toml  ruff.toml  user.example.yaml
.claude/: settings.local.json
.claude/agents/: tool-description-optimizer.md
.claude/docs/: anthropic-messages.md  anthropic-prompt-caching.md  anthropic_messages_request_schema_planning.md  anthropic_messages_response_schema_planning.md  anthropic_messages_streaming_schema_planning.md  architecture.html  conversion_items.md  gemini-generatecontent-doc.md  oai-chat-completion-schema.json  openai-chat-completion-complete-analysis.md  openai_chat_completion_response_schema_planning.md  openai_chat_completion_streaming_schema_planning.md  openai_tool_calling_schema.json
.claude/exports/: 2025-08-23-refactor-user-config.txt  2025-08-24-refactor-configuration.txt  2025-08-24-refactor-service-container.txt  2025-08-25-refactor-transformers-interface.txt  2025-08-25-user-config-fixes.txt  2025-08-28-refactor-openai-request-transformer.txt
app/: __init__.py  context.py  main.py
app/api/: claude.py  codex.py  config.py  errors.py  legacy.py  sse.py
app/common/: anthropic_errors.py  dumper.py  models.py  request_context.py  sse_converter.py  utils.py  (+2 more)
examples/: anthropic-messages-request.json  anthropic-messages-response.json  openai-chat-completion-request.json  openai-chat-completion-response.json  openai-test-resp-1.sse  openai-test-sse-1.sse
(+174 files in other folders)
