[project]
name = "cc-proxy"
version = "0.1.0"
description = "Proxy to make Claude Code more configurable"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
